{
    "name": "PinBoardControls",
    "maps": [
        {
            "name": "PinBoard",
            "id": "a8d95204-0452-4c7d-a274-326f513cc369",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "eeb4a843-cdba-4631-b218-46d810e8f836",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Zoom",
                    "type": "PassThrough",
                    "id": "3efde2e3-8833-481b-8464-433d14318b78",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bacfcc87-96b7-42f7-9315-a59305ddbb30",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5687f3f4-d858-448e-a632-79817e78e990",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}